@@ -14,7 +14,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_17
 }
 mainClassName = 'edu.mcw.rgd.RNASeqPipeline.Manager'
-String myAppName = 'RNASeqPipeline'
+String myAppName = 'rna-seq-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -23,17 +23,17 @@ repositories {
 }
 
 dependencies {
-    implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
+    implementation ('org.apache.commons:commons-dbcp2:2.13.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'commons-io:commons-io:2.11.0'
-    implementation 'commons-net:commons-net:3.10.0'
+    implementation 'commons-io:commons-io:2.12.0'
+    implementation 'commons-net:commons-net:3.11.0'
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.23.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.5'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'
+    implementation 'org.springframework:spring-jdbc:6.1.6'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
